--- a/nifi-nar-bundles/pom.xml
+++ b/nifi-nar-bundles/pom.xml
@@ -100,10 +100,11 @@
         <module>nifi-prometheus-bundle</module>
         <module>nifi-easyrules-bundle</module>
         <module>nifi-sql-reporting-bundle</module>
-	    <module>nifi-rules-action-handler-bundle</module>
+        <module>nifi-rules-action-handler-bundle</module>
+        <module>nifi-accumulo-bundle</module>
         <module>nifi-hazelcast-bundle</module>
-	    <module>nifi-accumulo-bundle</module>
-	    <module>nifi-asn1-bundle</module>
+        <module>nifi-asn1-bundle</module>
+        <module>nifi-jslt-bundle</module>
     </modules>
 
     <build>
